--- a/app/src/main/res/layout/toolbar.xml
+++ b/app/src/main/res/layout/toolbar.xml
@@ -1,7 +1,7 @@
 <android.support.v7.widget.Toolbar
     android:id="@+id/toolbar"
     android:layout_width="match_parent"
-    android:layout_height="?attr/actionBarSize"
+    android:layout_height="?android:attr/actionBarSize"
     style="@style/HeaderBackground"
     android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
     xmlns:android="http://schemas.android.com/apk/res/android" />
