--- a/app/src/main/res/layout/activity_outfit_list_adapter.xml
+++ b/app/src/main/res/layout/activity_outfit_list_adapter.xml
@@ -2,29 +2,20 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="horizontal">
+    android:orientation="vertical">
 
-    <LinearLayout
-        android:layout_width="wrap_content"
-        android:layout_weight="1"
-        android:layout_height="match_parent"
-        android:orientation="vertical"
-        android:background="@drawable/wardrobe_list_content">
+    <TextView
+        android:id="@+id/outfitName"
+        style="@style/WardrobeListName"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:textSize="24sp" />
 
-        <TextView
-            android:id="@+id/outfitName"
-            style="@style/WardrobeListName"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:textSize="24sp" />
-
-        <TextView
-            android:id="@+id/outfitElements"
-            style="@style/WardrobeListType"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:textSize="18sp" />
-
-    </LinearLayout>
+    <TextView
+        android:id="@+id/outfitElements"
+        style="@style/WardrobeListType"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:textSize="18sp" />
 
 </LinearLayout>
