--- a/app/src/main/res/layout/activity_wardrobe_outfit.xml
+++ b/app/src/main/res/layout/activity_wardrobe_outfit.xml
@@ -14,31 +14,20 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
-        <android.support.design.widget.FloatingActionButton
-            android:id="@+id/addNewWardrobeOutfit"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:backgroundTint="#FFBDBD"
-            app:borderWidth="0dp"
-            app:layout_constraintBottom_toBottomOf="parent"
+        <include layout="@layout/toolbar"
             app:layout_constraintEnd_toEndOf="parent"
-            android:src="@drawable/ic_round_add"
-            android:layout_margin="16dp" />
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintBottom_toTopOf="@+id/myList"/>
 
-        <android.support.constraint.ConstraintLayout
-            android:id="@+id/content_frame"
+        <ListView
+            android:id="@+id/myList"
             android:layout_width="match_parent"
-            android:layout_height="match_parent">
-
-            <include layout="@layout/toolbar" />
-
-            <ListView
-                android:id="@+id/myList"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                app:layout_constraintTop_toBottomOf="@+id/toolbar"/>
-
-        </android.support.constraint.ConstraintLayout>
+            android:layout_height="0dp"
+            app:layout_constraintTop_toBottomOf="@+id/toolbar"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent"/>
 
         <TextView
             android:id="@+id/emptyWardrobeOutfits"
@@ -49,12 +38,23 @@
             android:layout_marginStart="8dp"
             android:layout_marginTop="8dp"
             android:textAlignment="center"
+            android:text="@string/outfits_no_entries"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintVertical_bias="0.351" />
+            app:layout_constraintTop_toTopOf="parent" />
+
+        <android.support.design.widget.FloatingActionButton
+            android:id="@+id/addNewWardrobeOutfit"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:backgroundTint="#FFBDBD"
+            app:borderWidth="0dp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            android:src="@drawable/ic_round_add"
+            android:layout_margin="16dp" />
 
     </android.support.constraint.ConstraintLayout>
 
