--- a/app/src/main/res/layout/activity_wardrobe_outfit_add.xml
+++ b/app/src/main/res/layout/activity_wardrobe_outfit_add.xml
@@ -10,23 +10,25 @@
     android:layout_gravity="left"
     tools:context="fr.hexus.dresscode.activities.WardrobeOutfitAdd">
 
-    <LinearLayout
-        android:orientation="vertical"
-        android:id="@+id/content_frame"
+    <android.support.constraint.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
-        <android.support.v7.widget.Toolbar
-            android:id="@+id/toolbar"
-            android:layout_width="match_parent"
-            android:layout_height="?attr/actionBarSize"
-            style="@style/HeaderBackground"
-            android:theme="@style/ThemeOverlay.AppCompat.ActionBar" />
+        <include
+            layout="@layout/toolbar"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintBottom_toTopOf="@+id/outfitAddFormScroll"/>
 
             <ScrollView
+                android:id="@+id/outfitAddFormScroll"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_weight="1">
+                android:layout_height="0dp"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/toolbar"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintEnd_toEndOf="parent">
 
                 <android.support.constraint.ConstraintLayout
                     android:layout_width="match_parent"
@@ -114,6 +116,18 @@
 
             </ScrollView>
 
-    </LinearLayout>
+        <android.support.design.widget.FloatingActionButton
+            android:id="@+id/outfitAddFormSave"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:backgroundTint="#A9EEB8"
+            app:borderWidth="0dp"
+            android:onClick="onSubmitForm"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            android:src="@drawable/ic_baseline_done"
+            android:layout_margin="16dp" />
+
+    </android.support.constraint.ConstraintLayout>
 
 </android.support.v4.widget.DrawerLayout>
