--- a/app/src/main/res/layout/activity_sign_in.xml
+++ b/app/src/main/res/layout/activity_sign_in.xml
@@ -18,33 +18,38 @@
         app:layout_constraintBottom_toBottomOf="parent"
         android:visibility="gone"/>
 
-    <LinearLayout
+    <TextView
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="0dp"
+        style="@style/LogonPageTitle"
+        android:text="@string/app_name"
+        android:id="@+id/signInTitle"
         app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintBottom_toTopOf="@+id/signInForm"/>
+
+    <LinearLayout
+        android:id="@+id/signInForm"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        style="@style/logonPageForm"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"
         android:orientation="vertical">
 
-        <TextView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            style="@style/LogonPageTitle"
-            android:text="@string/app_name"
-            app:layout_constraintTop_toTopOf="parent"/>
-
         <EditText
             android:id="@+id/signInEmailInput"
-            style="@style/logonPageInput"
             android:layout_width="match_parent"
+            android:layout_height="wrap_content"
             android:hint="@string/logon_page_email_hint"
             android:inputType="textEmailAddress" />
 
         <EditText
             android:id="@+id/signInPasswordInput"
-            style="@style/logonPageInput"
             android:layout_width="match_parent"
+            android:layout_height="wrap_content"
             android:hint="@string/logon_page_password_hint"
             android:inputType="textPassword" />
 
