--- a/app/src/main/res/layout/activity_wardrobe.xml
+++ b/app/src/main/res/layout/activity_wardrobe.xml
@@ -32,11 +32,56 @@
 
             <include layout="@layout/toolbar" />
 
+                <LinearLayout
+                    android:id="@+id/syncBlock"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:orientation="vertical"
+                    app:layout_constraintBottom_toTopOf="@+id/myList"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toBottomOf="@+id/toolbar">
+
+                    <Button
+                        android:id="@+id/wardrobeSyncButton"
+                        style="@style/SyncButton"
+                        android:drawableStart="@android:drawable/stat_notify_sync"
+                        android:onClick="clickOnSync"
+                        android:text="@string/sync_with_api"/>
+
+                    <LinearLayout
+                        android:id="@+id/wardrobeSyncInfo"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:orientation="horizontal"
+                        app:layout_constraintBottom_toTopOf="@+id/myList"
+                        app:layout_constraintEnd_toEndOf="parent"
+                        app:layout_constraintStart_toStartOf="parent"
+                        app:layout_constraintTop_toBottomOf="@+id/toolbar"
+                        android:visibility="gone">
+
+                        <ProgressBar
+                            android:layout_width="32dp"
+                            android:layout_height="32dp" />
+
+                        <TextView
+                            android:layout_width="wrap_content"
+                            android:layout_height="32dp"
+                            android:text="@string/is_synching"
+                            style="@style/SyncMessage"/>
+
+                    </LinearLayout>
+
+                </LinearLayout>
+
             <ListView
                 android:id="@+id/myList"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                app:layout_constraintTop_toBottomOf="@+id/toolbar"
+                android:layout_height="0dp"
+                app:layout_constraintTop_toBottomOf="@+id/syncBlock"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
                 android:divider="#FFFFFF"/>
 
         </android.support.constraint.ConstraintLayout>
@@ -59,6 +104,7 @@
 
     </android.support.constraint.ConstraintLayout>
 
-    <include layout="@layout/navigation_view" />
+    <include
+        layout="@layout/navigation_view" />
 
 </android.support.v4.widget.DrawerLayout>
