--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -38,6 +38,20 @@
         <item name="android:paddingRight">4dp</item>
     </style>
 
+    <style name="SyncButton">
+        <item name="android:background">@drawable/sync_button</item>
+        <item name="android:textColor">#FFFFFF</item>
+        <item name="android:gravity">center</item>
+        <item name="android:fontFamily">@font/raleway_semi_bold</item>
+        <item name="android:layout_margin">8dp</item>
+        <item name="android:layout_width">wrap_content</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:drawablePadding">10dp</item>
+        <item name="android:textSize">14sp</item>
+        <item name="android:paddingLeft">8dp</item>
+        <item name="android:paddingRight">8dp</item>
+    </style>
+
     <style name="MenuButton">
         <item name="android:background">@drawable/menu_button</item>
         <item name="android:textColor">#FFFFFF</item>
@@ -242,6 +256,20 @@
         <item name="android:textSize">16sp</item>
         <item name="android:paddingLeft">4dp</item>
         <item name="android:paddingRight">4dp</item>
+    </style>
+
+    <style name="SyncMessage">
+        <item name="android:textColor">#6200EE</item>
+        <item name="android:fontFamily">@font/raleway_semi_bold</item>
+        <item name="android:textSize">16sp</item>
+        <item name="android:gravity">center_vertical</item>
+    </style>
+
+    <style name="logonPageForm">
+        <item name="android:background">@drawable/logon_form</item>
+        <item name="android:layout_margin">16dp</item>
+        <item name="android:padding">8dp</item>
+        <item name="android:elevation">8dp</item>
     </style>
 
 </resources>
