Working on network service

--- a/app/src/main/res/layout/activity_choose_wardrobe_element.xml
+++ b/app/src/main/res/layout/activity_choose_wardrobe_element.xml
@@ -34,6 +34,8 @@
             android:layout_marginStart="8dp"
             android:layout_marginTop="8dp"
             android:textAlignment="center"
+            android:text="@string/wardrobe_no_more_entries_to_add"
+            android:visibility="gone"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.0"
