--- a/app/src/main/res/drawable/home_activity_block.xml
+++ b/app/src/main/res/drawable/home_activity_block.xml
@@ -2,8 +2,8 @@
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
     <item >
         <shape android:shape="rectangle" >
-            <corners android:radius="6dp" />
-            <solid android:color="#428BCA" />
+            <corners android:radius="4dp" />
+            <solid android:color="#FFFFFF" />
         </shape>
     </item>
 </selector>
