--- a/app/src/main/res/layout/activity_outfit_list_adapter.xml
+++ b/app/src/main/res/layout/activity_outfit_list_adapter.xml
@@ -2,20 +2,28 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical">
+    android:orientation="vertical" >
 
-    <TextView
-        android:id="@+id/outfitName"
-        style="@style/WardrobeListName"
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:textSize="24sp" />
+        android:layout_height="match_parent"
+        android:orientation="vertical"
+        style="@style/OutfitBlock" >
 
-    <TextView
-        android:id="@+id/outfitElements"
-        style="@style/WardrobeListType"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:textSize="18sp" />
+        <TextView
+            android:id="@+id/outfitName"
+            style="@style/WardrobeListName"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:textSize="24sp" />
+
+        <TextView
+            android:id="@+id/outfitElements"
+            style="@style/WardrobeListType"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:textSize="18sp" />
+
+    </LinearLayout>
 
 </LinearLayout>
