--- a/app/src/main/res/layout/activity_wardrobe_outfit.xml
+++ b/app/src/main/res/layout/activity_wardrobe_outfit.xml
@@ -22,8 +22,12 @@
 
         <ListView
             android:id="@+id/myList"
-            android:layout_width="match_parent"
+            android:layout_width="0dp"
             android:layout_height="0dp"
+            android:divider="@null"
+            android:dividerHeight="0dp"
+            android:paddingTop="16dp"
+            android:paddingBottom="16dp"
             app:layout_constraintTop_toBottomOf="@+id/toolbar"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
