--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -346,4 +346,15 @@
         <item name="android:padding">8dp</item>
     </style>
 
+    <style name="OutfitBlock">
+        <item name="android:background">@drawable/outfit_activity_block</item>
+        <item name="android:layout_marginTop">4dp</item>
+        <item name="android:layout_marginEnd">16dp</item>
+        <item name="android:layout_marginBottom">4dp</item>
+        <item name="android:layout_marginStart">16dp</item>
+        <item name="android:paddingTop">8dp</item>
+        <item name="android:paddingBottom">8dp</item>
+        <item name="android:elevation">8dp</item>
+    </style>
+
 </resources>
