--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -357,4 +357,34 @@
         <item name="android:elevation">8dp</item>
     </style>
 
+    <style name="OutfitDetailTitle">
+        <item name="android:fontFamily">@font/raleway_semi_bold</item>
+        <item name="android:textColor">#000000</item>
+        <item name="android:textSize">18sp</item>
+        <item name="android:layout_marginTop">16dp</item>
+        <item name="android:layout_marginEnd">8dp</item>
+        <item name="android:layout_marginBottom">16dp</item>
+        <item name="android:layout_marginStart">8dp</item>
+    </style>
+
+    <style name="OutfitDetailRename">
+        <item name="android:background">@drawable/outfit_detail_rename_button</item>
+        <item name="android:layout_height">32dp</item>
+        <item name="android:paddingStart">8dp</item>
+        <item name="android:paddingEnd">8dp</item>
+        <item name="android:textColor">#FFFFFF</item>
+        <item name="android:drawableTint">#FFFFFF</item>
+        <item name="android:layout_marginStart">8dp</item>
+    </style>
+
+    <style name="OutfitDetailDelete">
+        <item name="android:background">@drawable/outfit_detail_delete_button</item>
+        <item name="android:layout_height">32dp</item>
+        <item name="android:paddingStart">8dp</item>
+        <item name="android:paddingEnd">8dp</item>
+        <item name="android:textColor">#FFFFFF</item>
+        <item name="android:drawableTint">#FFFFFF</item>
+        <item name="android:layout_marginStart">8dp</item>
+    </style>
+
 </resources>
